--- a/index.html
+++ b/index.html
@@ -197,5 +197,12 @@
       window.addEventListener("resize", sendHeight);
     });
   </script>
+  function sendHeight() {
+    const height = document.documentElement.scrollHeight;
+    parent.postMessage({ type: "setHeight", height: height }, "*");
+  }
+  window.addEventListener("load", sendHeight);
+  window.addEventListener("resize", sendHeight);
+</script>
 </body>
 </html>
