--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Profiles Carousel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profiles with Video Cycling</title>
   <style>
-    /* === Wrapper === */
+    /* === Wrapper & Layout === */
     #profile-wrapper {
       text-align: center;
       max-width: 360px;
@@ -19,57 +19,71 @@
     }
 
     /* === Profile Blocks === */
-    .profile { display: none; margin-bottom: 12px; }
+    .profile { display: none; }
     .profile.active { display: block; }
 
-    /* === Slider & Video === */
-    .slider {
+    /* === Video Slider === */
+    .video-slider {
       position: relative;
       width: 100%;
-      border-radius: 14px;
-      overflow: hidden;
-      margin-bottom: 8px;
+      margin-bottom: 12px;
     }
-    .slider video {
-      display: block;
+    .video-slider video {
+      display: none;
       width: 100%;
-      max-width: 320px;
+      max-width: 340px;
       margin: 0 auto;
       border-radius: 14px;
       background: #000;
-      aspect-ratio: 9 / 16;
-      object-fit: contain; /* keeps whole video visible */
+      aspect-ratio: 9/16;
+      object-fit: contain;
+    }
+    .video-slider video.active { display: block; }
+
+    /* === Video Controls === */
+    .video-controls {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      padding: 0 10px;
+      pointer-events: none;
+    }
+    .video-controls button {
+      pointer-events: auto;
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      border: none;
+      font-size: 20px;
+      padding: 6px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .video-controls button:hover {
+      background: rgba(255,255,255,0.3);
     }
 
-    /* Safari-specific tweaks */
-    @supports (-webkit-touch-callout: none) {
-      .slider video {
-        max-width: 300px !important;
-        height: auto !important;
-        object-fit: contain !important;
-      }
-    }
-
-    /* === Bio Card === */
+    /* === Bio Cards === */
     .bio-card {
       background: #000;
       color: #fff;
       border-radius: 14px;
       padding: 12px;
       box-shadow: 0 4px 14px rgba(0,0,0,0.3);
-      margin-bottom: 8px;
+      margin-bottom: 10px;
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
-    .profile.active .bio-card {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    .bio-name { font-size: 20px; font-weight: 700; margin-bottom: 4px; }
-    .bio-info { font-size: 14px; color: #aaa; margin-bottom: 4px; }
+    .profile.active .bio-card { opacity: 1; transform: translateY(0); }
+
+    .bio-name { font-size: 20px; font-weight: 800; margin-bottom: 4px; }
+    .bio-info { font-size: 14px; line-height: 1.4; color: #aaa; margin-bottom: 2px; }
     .bio-info span { font-weight: 600; color: #fff; }
-    .fruit-pick { font-size: 18px; font-weight: 700; margin-top: 6px; }
 
     /* === Nav Buttons === */
     .nav-buttons {
@@ -82,13 +96,13 @@
     .nav-buttons button, .meet-btn {
       padding: 6px 18px;
       border-radius: 800px;
-      font-weight: 800;
+      font-weight: 900;
       font-size: 13px;
       cursor: pointer;
       border: none;
       background: #DFF41F;
       color: #000;
-      transition: all 0.3s ease;
+      transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
       flex: 1;
     }
     .nav-buttons button:hover, .meet-btn:hover {
@@ -98,8 +112,14 @@
     }
     .meet-btn { flex: 1; max-width: 120px; margin: 0 auto; }
 
-    /* === Full Height Fix === */
-    html, body { margin: 0; padding: 0; height: 100%; overflow-x: hidden; }
+    /* === Safari Fixes === */
+    @supports (-webkit-touch-callout: none) {
+      .video-slider video {
+        max-width: 320px !important;
+        height: auto !important;
+        object-fit: contain !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -113,96 +133,96 @@
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const container = document.getElementById("profiles-container");
+    document.addEventListener('DOMContentLoaded', function() {
+      const container = document.getElementById('profiles-container');
       let allProfiles = [];
       let activeIndex = 0;
-      const API_KEY = "7dli8bleg4bq8";
+      const API_KEY = '7dli8bleg4bq8'; // sheetdb API
 
       fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
-        .then((res) => res.json())
-        .then((profiles) => {
+        .then(res => res.json())
+        .then(profiles => {
           allProfiles = profiles;
           renderProfiles(allProfiles);
           showProfile(activeIndex);
-          sendHeight(); // adjust iframe height
         });
 
       function renderProfiles(profiles) {
-        profiles.forEach((profile) => {
-          const profileDiv = document.createElement("div");
-          profileDiv.classList.add("profile");
+        profiles.forEach(profile => {
+          const profileDiv = document.createElement('div');
+          profileDiv.classList.add('profile');
 
-          // Slider + video
-          const slider = document.createElement("div");
-          slider.classList.add("slider");
+          // split multiple video links if comma-separated
+          const videos = profile.video_id ? profile.video_id.split(',').map(v => v.trim()) : [];
 
-          (profile.VideoIDs || "")
-            .split(/[\n,]+/)
-            .forEach((url) => {
-              url = url.trim();
-              if (!url) return;
-              const videoEl = document.createElement("video");
-              videoEl.src = url;
-              videoEl.autoplay = true;
-              videoEl.muted = true;
-              videoEl.loop = true;
-              videoEl.playsInline = true;
-              videoEl.controls = false;
-              slider.appendChild(videoEl);
-            });
+          let videoHTML = '';
+          if (videos.length > 0) {
+            videoHTML = `
+              <div class="video-slider">
+                ${videos.map((vid, i) => `
+                  <video src="${vid}" ${i === 0 ? 'class="active"' : ''} muted playsinline controls></video>
+                `).join('')}
+                ${videos.length > 1 ? `
+                  <div class="video-controls">
+                    <button class="prev">‹</button>
+                    <button class="next">›</button>
+                  </div>
+                ` : ''}
+              </div>
+            `;
+          }
 
-          profileDiv.appendChild(slider);
-
-          // Bio card
-          const bio = document.createElement("div");
-          bio.classList.add("bio-card");
-          bio.innerHTML = `
-            <div class="bio-name">${profile.Name || ""}</div>
-            <div class="bio-info"><span>📍 Location:</span> ${profile.Location || ""}</div>
-            <div class="bio-info"><span>🎂 Age:</span> ${profile.Age || ""}</div>
-            <div class="bio-info"><span>💖 Orientation:</span> ${profile.Orientation || ""}</div>
-            <div class="fruit-pick">${profile.FruitPick || ""}</div>
+          profileDiv.innerHTML = `
+            <div class="slider">${videoHTML}</div>
+            <div class="bio-card">
+              <div class="bio-name">${profile.name || 'Unknown'}</div>
+              <div class="bio-info"><span>Age:</span> ${profile.age || '-'}</div>
+              <div class="bio-info"><span>City:</span> ${profile.city || '-'}</div>
+            </div>
           `;
-          profileDiv.appendChild(bio);
+
           container.appendChild(profileDiv);
         });
+
+        initVideoSliders();
       }
 
       function showProfile(index) {
-        const profiles = document.querySelectorAll(".profile");
-        profiles.forEach((p) => p.classList.remove("active"));
-        if (profiles[index]) profiles[index].classList.add("active");
-        sendHeight();
+        const profiles = document.querySelectorAll('.profile');
+        profiles.forEach((p, i) => p.classList.toggle('active', i === index));
+      }
+
+      function initVideoSliders() {
+        document.querySelectorAll(".video-slider").forEach(slider => {
+          let videos = slider.querySelectorAll("video");
+          let current = 0;
+
+          if (videos.length === 0) return;
+
+          slider.querySelector(".next")?.addEventListener("click", () => {
+            videos[current].classList.remove("active");
+            current = (current + 1) % videos.length;
+            videos[current].classList.add("active");
+          });
+
+          slider.querySelector(".prev")?.addEventListener("click", () => {
+            videos[current].classList.remove("active");
+            current = (current - 1 + videos.length) % videos.length;
+            videos[current].classList.add("active");
+          });
+        });
       }
 
       document.getElementById("prev-btn").addEventListener("click", () => {
-        activeIndex = (activeIndex > 0) ? activeIndex - 1 : allProfiles.length - 1;
+        activeIndex = (activeIndex - 1 + allProfiles.length) % allProfiles.length;
         showProfile(activeIndex);
       });
 
       document.getElementById("next-btn").addEventListener("click", () => {
-        activeIndex = (activeIndex < allProfiles.length - 1) ? activeIndex + 1 : 0;
+        activeIndex = (activeIndex + 1) % allProfiles.length;
         showProfile(activeIndex);
       });
-
-      // Post height to parent (Shopify iframe)
-      function sendHeight() {
-        setTimeout(() => {
-          const height = document.body.scrollHeight;
-          window.parent.postMessage({ type: "setHeight", height }, "*");
-        }, 300);
-      }
-
-      window.addEventListener("resize", sendHeight);
     });
   </script>
-  function sendHeight() {
-    const height = document.documentElement.scrollHeight;
-    parent.postMessage({ type: "setHeight", height: height }, "*");
-  }
-  window.addEventListener("load", sendHeight);
-  window.addEventListener("resize", sendHeight);
-</script>
 </body>
 </html>
